--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@fontsource/bebas-neue": "^5.0.20",
     "@fontsource/old-standard-tt": "^5.0.20",
     "@midudev/tailwind-animations": "^0.0.7",
+    "embla-carousel": "^8.1.3",
+    "embla-carousel-autoplay": "^8.1.3",
+    "embla-carousel-fade": "^8.1.3",
+    "embla-carousel-react": "^8.1.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
