--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@clerk/nextjs": "^5.1.3",
     "@fontsource/bebas-neue": "^5.0.20",
     "@fontsource/old-standard-tt": "^5.0.20",
+    "@mantine/core": "^7.10.1",
+    "@mantine/form": "^7.10.1",
+    "@mantine/hooks": "^7.10.1",
+    "@mantine/modals": "^7.10.1",
     "@midudev/tailwind-animations": "^0.0.7",
     "@uploadthing/react": "^6.6.0",
     "embla-carousel": "^8.1.3",
@@ -29,10 +33,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "daisyui": "^4.11.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
