change stack and replace npm

--- a/package.json
+++ b/package.json
@@ -1,45 +1,62 @@
 {
-  "name": "fernandomartinena",
+  "name": "fernando-martinena",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "db:generate": "prisma migrate dev",
+    "db:migrate": "prisma migrate deploy",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "dev": "next dev",
+    "postinstall": "prisma generate",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.3",
-    "@fontsource/bebas-neue": "^5.0.20",
-    "@fontsource/old-standard-tt": "^5.0.20",
-    "@mantine/core": "^7.10.1",
-    "@mantine/form": "^7.10.1",
-    "@mantine/hooks": "^7.10.1",
-    "@mantine/modals": "^7.10.1",
-    "@mantine/notifications": "^7.11.0",
-    "@midudev/tailwind-animations": "^0.0.7",
-    "@uploadthing/react": "^6.6.0",
-    "embla-carousel": "^8.1.3",
-    "embla-carousel-autoplay": "^8.1.3",
-    "embla-carousel-fade": "^8.1.3",
-    "embla-carousel-react": "^8.1.3",
-    "mongoose": "^8.4.1",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "svix": "^1.24.0",
-    "uploadthing": "^6.12.0"
+    "@auth/prisma-adapter": "^1.6.0",
+    "@mantine/core": "^7.12.1",
+    "@mantine/dates": "^7.12.1",
+    "@mantine/form": "^7.12.1",
+    "@mantine/hooks": "^7.12.1",
+    "@mantine/notifications": "^7.12.1",
+    "@prisma/client": "^5.14.0",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.50.0",
+    "@trpc/client": "^11.0.0-rc.446",
+    "@trpc/react-query": "^11.0.0-rc.446",
+    "@trpc/server": "^11.0.0-rc.446",
+    "dayjs": "^1.11.13",
+    "geist": "^1.3.0",
+    "next": "^14.2.4",
+    "next-auth": "^4.24.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "server-only": "^0.0.1",
+    "superjson": "^2.2.1",
+    "zod": "^3.23.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
-    "postcss-preset-mantine": "^1.15.0",
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4",
+    "postcss": "^8.4.41",
+    "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prisma": "^5.14.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.5.3"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.37.0"
+  },
+  "packageManager": "pnpm@9.7.1"
 }
