--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
+    "@fontsource/bebas-neue": "^5.0.21",
+    "@fontsource/old-standard-tt": "^5.0.21",
     "@mantine/core": "^7.12.1",
     "@mantine/dates": "^7.12.1",
     "@mantine/form": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
+    "@mantine/modals": "^7.12.1",
     "@mantine/notifications": "^7.12.1",
+    "@midudev/tailwind-animations": "^0.0.7",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
