Add build completed

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@auth/prisma-adapter": "^1.6.0",
     "@fontsource/bebas-neue": "^5.1.0",
     "@fontsource/old-standard-tt": "^5.1.0",
-    "@mantine/core": "^7.14.2",
-    "@mantine/dates": "^7.14.2",
-    "@mantine/form": "^7.14.2",
-    "@mantine/hooks": "^7.14.2",
-    "@mantine/modals": "^7.14.2",
-    "@mantine/notifications": "^7.14.2",
+    "@mantine/carousel": "^7.14.3",
+    "@mantine/core": "^7.14.3",
+    "@mantine/dates": "^7.14.3",
+    "@mantine/form": "^7.14.3",
+    "@mantine/hooks": "^7.14.3",
+    "@mantine/modals": "^7.14.3",
+    "@mantine/notifications": "^7.14.3",
     "@midudev/tailwind-animations": "^0.0.7",
     "@prisma/client": "^5.22.0",
     "@t3-oss/env-nextjs": "^0.10.1",
