--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@midudev/tailwind-animations": "^0.0.7",
     "@prisma/client": "^5.22.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tabler/icons-react": "^3.24.0",
     "@tanstack/react-query": "^5.61.3",
     "@trpc/client": "11.0.0-rc.643",
     "@trpc/react-query": "11.0.0-rc.643",
     "@trpc/server": "11.0.0-rc.643",
     "@types/bcrypt": "^5.0.2",
+    "@uploadthing/react": "^7.1.2",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
     "geist": "^1.3.1",
@@ -43,6 +45,7 @@
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "uploadthing": "^7.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
